add gui